fix: update home page design with fix alignment and change color palette to gradient

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,7 @@
   .wrapper {
       @apply max-w-7xl mx-auto px-3 lg:px-0
   }
+ .gradient-color {
+    @apply bg-gradient-to-r from-primary/95 to-gradient/80;
+  }
 }
